--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,21 @@ project/plugins/project/
 # HackerRank specific
 contests
 challenges
+
+# Haskell
+dist
+cabal-dev
+*.o
+*.hi
+*.chi
+*.chs.h
+*.dyn_o
+*.dyn_hi
+.hpc
+.hsenv
+.cabal-sandbox/
+cabal.sandbox.config
+*.prof
+*.aux
+*.hp
+.stack-work/
